metadata/objects/graxgrax_summaryindex__x.object
<CustomObject>
    <description>graxgrax_summaryindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxgrax_summaryindex</externalName>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>OwnerId</description>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <description>OwnerName</description>
        <externalDeveloperName>OwnerName</externalDeveloperName>
        <label>OwnerName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>executionUniqueKey__c</fullName>
        <description>executionUniqueKey</description>
        <externalDeveloperName>executionUniqueKey</externalDeveloperName>
        <label>executionUniqueKey</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxspid__c</fullName>
        <description>graxspid</description>
        <externalDeveloperName>graxspid</externalDeveloperName>
        <label>graxspid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isArchive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isArchive</description>
        <externalDeveloperName>isArchive</externalDeveloperName>
        <label>isArchive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isProgressive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isProgressive</description>
        <externalDeveloperName>isProgressive</externalDeveloperName>
        <label>isProgressive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>objectName__c</fullName>
        <description>objectName</description>
        <externalDeveloperName>objectName</externalDeveloperName>
        <label>objectName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sendNotification</description>
        <externalDeveloperName>sendNotification</externalDeveloperName>
        <label>sendNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>spId__c</fullName>
        <description>spId</description>
        <externalDeveloperName>spId</externalDeveloperName>
        <label>spId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spName__c</fullName>
        <description>spName</description>
        <externalDeveloperName>spName</externalDeveloperName>
        <label>spName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>graxgrax_summaryindex</label>
    <pluralLabel>graxgrax_summaryindex</pluralLabel>
</CustomObject>